[package]
name = "climb_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.6.0"
env_logger = "0.11.3"
postgres = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
futures = "0.3.30"