[package]
name = "climb_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.6.0"
env_logger = "0.11.3"
postgres = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
futures = "0.3.30"
async-trait = "0.1"
rand = "0.8"
regex = "1.10.4"

[dev-dependencies]
mockall = "0.12.1"
thiserror = "1.0"
curl = "0.4.46"
